# gazelle_plugins

./: .bazelrc  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  README.md  REPO.bazel  go.mod  go.sum
.bcr/: metadata.template.json  presubmit.yml
bcr_test/: BUILD.bazel  MODULE.bazel
crates/import-extractor/: BUILD.bazel  Cargo.toml  README.md
crates/import-extractor-proto/: BUILD.bazel  Cargo.toml
crates/import-extractor-proto/src/: lib.rs
crates/import-extractor/src/: lib.rs  main.rs  python.rs  wire.rs
crates/import-extractor/tests/: integration.rs
crates/import-extractor/tests/fixtures/: sample.py  sample.ts
crates/import_extractor/: BUILD.bazel  Cargo.toml  README.md  ffi_symbols_test.go  opt.bzl
crates/import_extractor/src/: ffi.rs  lib.rs  main.rs  ts.rs  wire.rs
crates/import_extractor/tests/: integration.rs
examples/: README.md
examples/advanced/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
examples/advanced/apps/cli/: BUILD.bazel  main.ts  types.d.ts  users.json
examples/advanced/apps/web/: BUILD.bazel  app.test.ts
examples/advanced/tools/: BUILD.bazel  ts.bzl
examples/basic/: BUILD.bazel  MODULE.bazel  README.md  app.ts  badge.tsx  package.json
examples/basic/tools/: ts.bzl
examples/bundler-config/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  app.ts  vite.config.ts  vitest.config.ts
examples/bundler-config/tools/: BUILD.bazel  bundler.bzl  ts.bzl
examples/composite/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  package.json
examples/composite/apps/web/: BUILD.bazel  UserList.tsx
examples/composite/tools/: ts.bzl
examples/cross_compile/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
examples/custom-extractor/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  pnpm-lock.yaml  tsconfig.json
examples/graphql/: BUILD.bazel  MODULE.bazel  README.md  package.json
examples/graphql/apps/web/: BUILD.bazel  UserCard.test.ts  UserCard.tsx
examples/graphql/schema/: BUILD.bazel  package.json  schema.graphql
examples/graphql/tools/: ts.bzl
examples/monorepo/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/monorepo/apps/cli/: main.ts
examples/monorepo/apps/cli/src/: BUILD.bazel  main.ts
examples/monorepo/apps/web/: app.test.ts  index.ts
examples/monorepo/apps/web/src/: BUILD.bazel  app.test.ts  index.ts
examples/monorepo/tools/: BUILD.bazel  noop_test.sh  stubs.bzl
examples/monorepo/tools/npm/: BUILD.bazel
gazelle_ts_plugin/: BUILD.bazel  README.md  config.go  config_test.go  configure.go  fix.go  generate.go  generate_test.go  import_extractor.go  kinds.go  language.go  lifecycle.go  parser.go  parser_oxc.go  resolve.go  resolve_test.go
gazelle_ts_plugin/proto/: BUILD.bazel  stub.go
import_extractor/: BUILD.bazel  README.md  extensions.bzl  (+1 more)
proto/: BUILD.bazel  message.proto
rust_toolchains/: BUILD.bazel
ts/: BUILD.bazel  README.md  config.go  config_test.go  configure.go  defs.bzl  generate.go  generate_test.go  import_extractor.go  imports.go  kinds.go  kinds_test.go  language.go  lifecycle.go  parser.go  resolve.go  resolve_test.go
ts/proto/: BUILD.bazel  stub.go
ts/testdata/advanced/: BUILD.in  BUILD.out  MODULE.bazel  package.json  tsconfig.json
ts/testdata/advanced/apps/cli/: BUILD.out  main.ts
ts/testdata/advanced/apps/web/: BUILD.in  BUILD.out
ts/testdata/advanced/tools/: mystery.js  ts.bzl
ts/testdata/basic/: BUILD.in  BUILD.out  MODULE.bazel  app.test.ts
ts/testdata/basic/tools/: ts.bzl
ts/testdata/bundler-config/: BUILD.out  MODULE.bazel  app.test.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  viteHelpers.ts
ts/testdata/bundler-config/tools/: ts.bzl
ts/testdata/cjs_require/: BUILD.in  BUILD.out  MODULE.bazel  app.ts  package.json
ts/testdata/composite/: tsconfig.json
ts/testdata/composite/apps/web/: BUILD.out  UserList.test.ts  users.json
ts/testdata/directive_resolve_override/: BUILD.in  BUILD.out  MODULE.bazel  app.ts  package.json
ts/testdata/directive_ts_enabled_false/: MODULE.bazel  package.json
ts/testdata/directive_ts_extension/: BUILD.in  BUILD.out  MODULE.bazel  package.json
ts/testdata/directive_ts_library_name/: BUILD.in  BUILD.out  MODULE.bazel  package.json
ts/testdata/directive_ts_resolve_global/: BUILD.in  BUILD.out  MODULE.bazel  app.ts  package.json
ts/testdata/directive_ts_test_data/: BUILD.in  BUILD.out  MODULE.bazel  package.json
ts/testdata/directive_ts_test_pattern/: BUILD.in  BUILD.out  MODULE.bazel  app.spec.ts  package.json
ts/testdata/directive_ts_visibility/: BUILD.in  BUILD.out  MODULE.bazel  package.json
ts/testdata/dynamic_import/: BUILD.out  MODULE.bazel  app.ts  package.json
ts/testdata/graphql/: BUILD.out  pnpm-lock.yaml
ts/testdata/graphql/apps/web/: BUILD.out  UserCard.tsx
ts/testdata/graphql/schema/: codegen.ts  package.json  queries.graphql
ts/testdata/graphql/tools/: ts.bzl
ts/testdata/imports_generated_package/: MODULE.bazel  package.json
ts/testdata/imports_generated_package/app/: App.ts  BUILD.out
ts/testdata/imports_generated_package/typespec/rest/users/: BUILD.out
ts/testdata/library_with_test/: BUILD.out  MODULE.bazel  app.test.ts  app.ts  package.json
ts/testdata/local_ambient_types/: BUILD.in  BUILD.out  MODULE.bazel  app.ts  package.json
ts/testdata/node_builtin_import/: BUILD.out  MODULE.bazel  app.ts  package.json
ts/testdata/npm_css_side_effect/: BUILD.out  MODULE.bazel  app.ts  package.json
ts/testdata/relative_import/: BUILD.out  MODULE.bazel  app.ts  helper.ts  package.json
ts/testdata/scoped_npm_with_types/: BUILD.out  MODULE.bazel  app.ts  package.json
ts/testdata/simple_library/: BUILD.out  MODULE.bazel  package.json
ts/testdata/tsx_with_react/: BUILD.out  MODULE.bazel  badge.tsx  package.json
ts/testdata/type_only_import/: BUILD.out  MODULE.bazel  app.ts  package.json
ts/testdata/upstream_nested_spec_map_kind/: BUILD.in  BUILD.out  MODULE.bazel  defs.bzl  package.json
ts/testdata/upstream_nested_spec_map_kind/tests/: BUILD.out  foo.spec.ts
(+5 files in other folders)
