# Custom host platform that adds the libc version constraint rules_rs's
# experimental Linux GNU toolchains require (target_compatible_with includes
# @llvm//constraints/libc:gnu.2.28). Activated via --host_platform=//:local_gnu_platform
# on Linux only — see .bazelrc.
platform(
    name = "local_gnu_platform",
    constraint_values = ["@llvm//constraints/libc:gnu.2.28"],
    parents = ["@platforms//host"],
)
