[workspace]
resolver = "2"
members = [
    "crates/import-extractor",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/hermeticbuild/gazelle_ts"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"

[workspace.dependencies]
# TypeScript parsing (oxc)
oxc = { version = "0.127", features = ["ast_visit"] }
oxc_allocator = "0.127"
oxc_ast = "0.127"
oxc_parser = "0.127"
oxc_span = "0.127"

# Proto / RPC
# Pinned to 0.13.1 to match the prost runtime that rules_rs's rust_prost_library
# generates against (its bundled rrprd repo). Mismatched versions produce
# trait-path conflicts at link time.
prost = "=0.13.1"
prost-types = "=0.13.1"

# Shared
rayon = "1.12"
serde = "1"
serde_json = "1"
