module(
    name = "gazelle_ts",
    version = "0.0.0",
    bazel_compatibility = [">=8.5.0"],
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_rs", version = "0.0.61")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "34.0.bcr.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "with_cfg.bzl", version = "0.14.6")

# rules_rust facade — exposes @rules_rust so .bazelrc's --config=opt and
# the with_cfg wrapper in //crates/import_extractor:opt.bzl can reference
# @rules_rust//:extra_rustc_flags. Also keeps rules_rs's internal loads
# resolving against the same canonical repo for toolchain_type matching.
# We also reference @rules_rust//rust:toolchain_type and the channel /
# bootstrapped config_settings from //rust_toolchains:BUILD.bazel.
rules_rust = use_extension("@rules_rs//rs:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

# Rust toolchain — propagates to consumers because their gazelle_binary
# links our staticlib via cgo and needs to build the rust crate.
toolchains = use_extension(
    "@rules_rs//rs/toolchains:module_extension.bzl",
    "toolchains",
)
toolchains.toolchain(
    edition = "2024",
    version = "1.95.0",
)
use_repo(toolchains, "default_rust_toolchains")

# Register libc-free wrappers around @default_rust_toolchains' rustc rules
# FIRST — they win over rules_rs's libc-pinned rustc wrappers because
# Bazel picks the earliest matching registration per toolchain_type. See
# //rust_toolchains:BUILD.bazel for the rationale.
#
# Then register @default_rust_toolchains//:all so the rustfmt and
# rust_analyzer toolchains (which have empty target_compatible_with and
# don't need re-wrapping) come along. The libc-pinned rustc entries in
# `:all` stay registered but are never matched in practice.
register_toolchains(
    "//rust_toolchains:all",
    "@default_rust_toolchains//:all",
)

# Crate resolution: rules_rs reads Cargo.toml/Cargo.lock directly (no
# repinning). Propagates to consumers along with the rust toolchain above.
# The hub name is namespaced (`gazelle_ts_crates` rather than the generic
# `crates`) so it doesn't collide with consumers' own crate.from_cargo
# invocations — rules_rs merges hubs by name, and a collision would pair
# our Cargo.lock against the consumer's Cargo.toml.
crate = use_extension(
    "@rules_rs//rs:extensions.bzl",
    "crate",
)
crate.from_cargo(
    name = "gazelle_ts_crates",
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(crate, "gazelle_ts_crates")

# Prost/tonic codegen toolchains for rust_prost_library.
rules_rust_prost = use_extension("@rules_rs//rs:rules_rust_prost.bzl", "rules_rust_prost")
use_repo(rules_rust_prost, "rules_rust_prost")

register_toolchains("@rules_rust_prost//:default_prost_toolchain")

# Go toolchain + module deps for the gazelle plugin.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.12")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "org_golang_google_protobuf",
)
