# Each subdirectory of examples/ is its own self-contained Bazel workspace
# (its own MODULE.bazel + .bazelrc). The parent repo's `bazel ... //...`
# walks must skip them so the parent's MODULE doesn't try to resolve the
# examples' BUILD-file load() statements (which reference modules like
# aspect_rules_ts that the parent doesn't pull in).
ignore_directories(["examples"])
