load("@rules_go//go:def.bzl", "go_library", "go_test")

# `ts` is the gazelle Language. Consumers compose their own gazelle_binary
# referencing this label, e.g.
#
#     gazelle_binary(
#         name = "gazelle_bin",
#         languages = ["@gazelle_ts//ts"],
#     )
#
# That keeps the linked binary surface in the consumer's hands (so multiple
# gazelle languages can be combined into one binary) while we ship just the
# language plugin.
go_library(
    name = "ts",
    srcs = [
        "config.go",
        "configure.go",
        "fix.go",
        "generate.go",
        "import_extractor.go",
        "imports.go",
        "kinds.go",
        "language.go",
        "parser.go",
        "resolve.go",
    ],
    cgo = True,
    # Rust import_extractor staticlib linked via cgo. The wrapper in
    # //crates/import_extractor pins compilation_mode=opt and the release
    # rustc flags via with_cfg, so consumers get an optimized binary even
    # when their own bazel invocation runs in fastbuild.
    cdeps = ["//crates/import_extractor:import_extractor_static"],
    # Rust std uses dlsym (sys/pal/unix/weak/dlsym.rs). On glibc < 2.34
    # (e.g. Debian 11) libdl is a separate object — without -ldl the cgo
    # link fails with "undefined reference to 'dlsym'". On glibc ≥ 2.34
    # (Ubuntu 22.04+) libdl is a stub that forwards to libc, so the flag
    # is harmless. rules_rs's stdlib_linkflags select doesn't add -ldl
    # for plain @platforms//os:linux.
    clinkopts = select({
        "@platforms//os:linux": ["-ldl"],
        "//conditions:default": [],
    }),
    importpath = "github.com/hermeticbuild/gazelle_ts/ts",
    visibility = ["//visibility:public"],
    deps = [
        "//ts/proto:import_extractor_go_proto",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "ts_test",
    srcs = [
        "config_test.go",
        "generate_test.go",
        "resolve_test.go",
    ],
    # Mirror the go_library's clinkopts — go_test re-links and the
    # cgo'd Rust staticlib still needs dlsym on glibc < 2.34.
    clinkopts = select({
        "@platforms//os:linux": ["-ldl"],
        "//conditions:default": [],
    }),
    embed = [":ts"],
    deps = [
        "@gazelle//rule",
    ],
)
