load("@gazelle//:def.bzl", "gazelle_binary", "gazelle_generation_test")
load("@rules_go//go:def.bzl", "go_library", "go_test")

# defs.bzl is the public Starlark surface — consumers' generated BUILD files
# load `ts_bundler_config` from `@gazelle_ts//ts:defs.bzl`. Exported as a
# file group so bzlmod consumers can resolve the load() target without a
# matching rule label.
exports_files(["defs.bzl"])

# `ts` is the gazelle Language. Consumers compose their own gazelle_binary
# referencing this label, e.g.
#
#     gazelle_binary(
#         name = "gazelle_bin",
#         languages = ["@gazelle_ts//ts"],
#     )
#
# That keeps the linked binary surface in the consumer's hands (so multiple
# gazelle languages can be combined into one binary) while we ship just the
# language plugin.
go_library(
    name = "ts",
    srcs = [
        "config.go",
        "configure.go",
        "fix.go",
        "generate.go",
        "import_extractor.go",
        "imports.go",
        "kinds.go",
        "language.go",
        "parser.go",
        "resolve.go",
    ],
    cgo = True,
    # Rust import_extractor staticlib linked via cgo. The wrapper in
    # //crates/import_extractor pins compilation_mode=opt and the release
    # rustc flags via with_cfg, so consumers get an optimized binary even
    # when their own bazel invocation runs in fastbuild.
    cdeps = ["//crates/import_extractor:import_extractor_static"],
    # Rust std uses dlsym (sys/pal/unix/weak/dlsym.rs). On glibc < 2.34
    # (e.g. Debian 11) libdl is a separate object — without -ldl the cgo
    # link fails with "undefined reference to 'dlsym'". On glibc ≥ 2.34
    # (Ubuntu 22.04+) libdl is a stub that forwards to libc, so the flag
    # is harmless. rules_rs's stdlib_linkflags select doesn't add -ldl
    # for plain @platforms//os:linux.
    clinkopts = select({
        "@platforms//os:linux": ["-ldl"],
        "//conditions:default": [],
    }),
    importpath = "github.com/hermeticbuild/gazelle_ts/ts",
    visibility = ["//visibility:public"],
    deps = [
        "//ts/proto:import_extractor_go_proto",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "ts_test",
    srcs = [
        "config_test.go",
        "generate_test.go",
        "resolve_test.go",
    ],
    # Mirror the go_library's clinkopts — go_test re-links and the
    # cgo'd Rust staticlib still needs dlsym on glibc < 2.34.
    clinkopts = select({
        "@platforms//os:linux": ["-ldl"],
        "//conditions:default": [],
    }),
    embed = [":ts"],
    deps = [
        "@gazelle//rule",
    ],
)

# Gazelle binary linked against this package's language plugin. Used only by
# the generation test below — consumers compose their own gazelle_binary
# referencing `//ts` as a language.
gazelle_binary(
    name = "gazelle_test_binary",
    languages = [":ts"],
    visibility = ["//visibility:private"],
)

# Golden tests against //ts/testdata/<example>/. Each subdirectory containing
# a MODULE.bazel is run as a Go subtest: gazelle generates BUILDs from the
# BUILD.in seeds and the framework diffs against BUILD.out. The testdata is
# a snapshot of //examples/<name>/, so a plugin change that alters generation
# fails this test before it lands in any consumer workspace.
#
# To refresh after an intentional change, run:
#     UPDATE_SNAPSHOTS=true bazel run //ts:gazelle_generation_test
gazelle_generation_test(
    name = "gazelle_generation_test",
    gazelle_binary = ":gazelle_test_binary",
    gazelle_timeout_seconds = 60,
    test_data = glob(["testdata/**"]),
)
