load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

proto_library(
    name = "import_extractor_proto",
    srcs = ["proto/message.proto"],
    strip_import_prefix = "/crates/import-extractor-proto/proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "import_extractor_rust_proto",
    proto = ":import_extractor_proto",
    visibility = ["//visibility:public"],
)
