load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rs//rs:rust_binary.bzl", "rust_binary")
load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

proto_library(
    name = "import_extractor_proto",
    srcs = ["proto/message.proto"],
    strip_import_prefix = "/crates/import-extractor/proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "import_extractor_rust_proto",
    proto = ":import_extractor_proto",
    visibility = ["//visibility:public"],
)

rust_library(
    name = "import_extractor",
    srcs = [
        "src/lib.rs",
        "src/python.rs",
        "src/ts.rs",
        "src/wire.rs",
    ],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        ":import_extractor_rust_proto",
        # Use the same prost runtime as rust_prost_library — sharing identical
        # versions across separate crate.from_cargo invocations isn't enough,
        # they're distinct repo instances and Rust treats them as different types.
        "@rules_rs//rs/private/prost:prost_runtime",
        "@crates//:oxc",
        "@crates//:oxc_allocator",
        "@crates//:oxc_ast",
        "@crates//:oxc_parser",
        "@crates//:oxc_span",
        "@crates//:rayon",
        "@crates//:ruff_python_ast",
        "@crates//:ruff_python_parser",
        "@crates//:ruff_text_size",
        "@crates//:serde",
    ],
)

rust_binary(
    name = "bin",
    srcs = ["src/main.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [":import_extractor"],
)

rust_test(
    name = "test",
    crate = ":import_extractor",
)

rust_test(
    name = "integration_test",
    srcs = ["tests/integration.rs"],
    edition = "2021",
    deps = [
        ":import_extractor",
        ":import_extractor_rust_proto",
        "@rules_rs//rs/private/prost:prost_runtime",
    ],
)
