[package]
name = "import-extractor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "import_extractor"
path = "src/main.rs"

[dependencies]
# TypeScript parsing (oxc)
oxc = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }

# Python parsing (ruff)
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.10" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.10" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.10" }

# Proto
import-extractor-proto = { path = "../import-extractor-proto" }

# Shared
rayon = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
