[package]
name = "import-extractor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "import_extractor"
path = "src/main.rs"

[dependencies]
# TypeScript parsing (oxc)
oxc = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }

# Shared
rayon = { workspace = true }
prost = { workspace = true }
