load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

# gazelle:ts_npm_link_pattern //:node_modules/{pkg}
# gazelle:ts_tsconfig //:tsconfig

gazelle(
    name = "gazelle",
    gazelle = "@gazelle_plugins//gazelle_ts_plugin:gazelle_ts",
)
